fix small layout issues

--- a/resources/sass/general/_variables.scss
+++ b/resources/sass/general/_variables.scss
@@ -28,7 +28,7 @@ $font-secondary: "Source Sans Pro", sans-serif;
 $default-font-size: 16px;
 $form-font-size: $default-font-size;
 
-$layout-width: 1100px;
+$layout-width: 1300px;
 $header-height: 300px;
 $footer-height: 100px;
 $login-button-size: 130px;
